Add grant endpoint to Swagger config and regenerate
Refs #13
